# mgsmbCalc-old

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: math.h
output/: main
src/: calculator.cpp  eval.cpp  eval.h  main.cpp  mgsmbCalc.cpp
